# mis_prototype

./: .env.example  .gitignore  AGENTS.md  README.md  Tài liệu thuyết minh kiến trúc và an toàn hệ thống.docx  data_flow_diagram.pu  pyproject.toml  run_con-004_approvals_log.txt  run_con004_approvals.py  ~$i liệu thuyết minh kiến trúc và an toàn hệ thống.docx
.test-temp-ai-recommendation-2/test_new_run_request_preserves0/: approval-new-run-request.db
.test-temp-ai-recommendation-2/test_pending_precheck_approval0/: approval-restart.db
.test-temp-ai-recommendation-2/test_pending_workflow_recovers0/: workflow-restart.db
.test-temp-ai-recommendation-2/test_rejected_approval_blocks_0/: approval-rejection.db
docs/: BANKING_PROVIDER_RESPONSE_ASSUMPTIONS.md  BANKING_SKILL.md  DATA_MASKING_ALGORITHMS.md  DATA_MASKING_POLICY.md  DECISION_BANKING_HANDOFF.md  DECISION_FINAL_APPROVAL_AND_RELEASE.md  DECISION_INITIAL_ROUTE.md  DECISION_POST_BANKING_REVIEW.md  DECISION_POST_PRECHECK_REVIEW.md  DOCUMENT_SKILL.md  EXTERNAL_API_SECURITY_BOUNDARY.md  FINAL_RISK_CHECK.md  FINANCE_AGENT.md  INTERNAL_DECISION_PACKAGE.md  MASTER_WORKFLOW.md  OPERATIONS_SKILL.md  RISK_AGENT.md  SYSTEM_ARCHITECTURE.md  TAI_LIEU_THUYET_MINH_KIEN_TRUC_OPC_MIS.docx  VALIDATION_REPORTS.md  ~$I_LIEU_THUYET_MINH_KIEN_TRUC_OPC_MIS.docx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
sample_docs/: CASHFLOW_BUFFER_EVIDENCE_CON-004.docx  PERFORMANCE_BOND_REQUEST_FORM_CON-004.docx  ~$RFORMANCE_BOND_REQUEST_FORM_CON-004.docx  ~$SHFLOW_BUFFER_EVIDENCE_CON-004.docx
(+892 files in other folders)
