[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "opc-mis"
version = "0.1.0"
description = "OPC MIS Agentic AI modular monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "openpyxl>=3.1,<4",
    "openai>=1.109,<3",
    "pandas>=2.2,<4",
    "pydantic>=2.10,<3",
    "python-dotenv>=1,<2",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
